--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <link rel="icon" href="./images/favicon.svg" sizes="any" />
         <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
         <link rel="apple-touch-icon" href="./images/favicon.svg" />
+        <object type="image/svg+xml" data="/svg/sprite.svg"></object>
         <script src="./scripts/set-theme.js"></script>
     </head>
     <body class="page">
         <header class="header content-section">
             <div class="logo">
-                 &lt;/HTML&gt;
+                &lt;/HTML&gt;
             </div>
             <h1 class="closing-tag">закрывающий тег</h1>
             <nav class="theme-menu header__theme-menu">
@@ -47,15 +48,16 @@
             <section class="card__block">
                 <article class="card">
                     <h2 class="main__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
-                        <p class="label">&lt;/HTML&gt;</p>  
+                    <div class="card-conteiner">
+                        <p class="label">&lt;/HTML&gt;</p>
                         <img class="image-car" src="./images/спринт-0.jpg" alt="программист в недоумение" />
-                    
+                    </div>
                     <div class="content-paragraf">
                         <p class="content-text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
-                        <p class="content-opinion">Место для ваших воспоминаний о начале обучения.</p>
+                        <p class="content-text">Место для ваших воспоминаний о начале обучения.</p>
                     </div>
                     <div class="button">
-                        <button type="type" class="card__icon-button">
+                        <button type="button" class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
@@ -95,10 +97,10 @@
                             На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением
                             скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
                         </p>
-                        <p class="content-opinion">Место для ваших воспоминаний о начале первого спринта.</p>
+                        <p class="content-text">Место для ваших воспоминаний о начале первого спринта.</p>
                     </div>
                     <div class="button">
-                        <button type="type" class="card__icon-button">
+                        <button type="button" class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
@@ -135,10 +137,10 @@
                     </div>
                     <div class="content-paragraf">
                         <p class="content-text">Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
-                        <p class="content-opinion">Место для ваших воспоминаний об окончании первого спринта.</p>
+                        <p class="content-text">Место для ваших воспоминаний об окончании первого спринта.</p>
                     </div>
                     <div class="button">
-                        <button type="type" class="card__icon-button">
+                        <button type="button" class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
@@ -170,7 +172,7 @@
                 <article class="card">
                     <h2 class="main__title">2 спринт: Погоня за идеалом</h2>
                     <div class="card-conteiner">
-                       <p class="label">&lt;desigions&gt;</p>
+                        <p class="label">&lt;desigions&gt;</p>
                         <img class="image-car filter-opacity" src="./images/спринт-3.jpg" alt="программист" />
                     </div>
                     <div class="content-paragraf">
@@ -178,10 +180,10 @@
                             На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены
                             перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
                         </p>
-                        <p class="content-opinion">Место для ваших воспоминаний о начале второго спринта.</p>
+                        <p class="content-text">Место для ваших воспоминаний о начале второго спринта.</p>
                     </div>
                     <div class="button">
-                        <button type="type" class="card__icon-button">
+                        <button type="button" class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
@@ -213,7 +215,7 @@
                 <article class="card">
                     <h2 class="main__title">2 спринт: О тех, кто рядом</h2>
                     <div class="card-conteiner">
-                       <p class="label">care</p>
+                        <p class="label">care</p>
                         <img class="image-car filter-saturate" src="./images/спринт-4.jpg" alt="пиксельная машина" />
                     </div>
                     <div class="content-paragraf">
@@ -221,9 +223,9 @@
                             Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если
                             очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
                         </p>
-                        <p class="content-opinion">Место для ваших воспоминаний об окончании второго спринта.</p>
+                        <p class="content-text">Место для ваших воспоминаний об окончании второго спринта.</p>
                     </div>
-                    <div type="type" class="button">
+                    <div type="button" class="button">
                         <button class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
@@ -256,14 +258,14 @@
                 <article class="card">
                     <h2 class="main__title">3 спринт: Обходные стратегии</h2>
                     <div class="card-conteiner">
-                        <p class="label">&lt;support&gt;</p>  
+                        <p class="label">&lt;support&gt;</p>
                         <img class="image-car filter-sepia" src="./images/спринт-5.jpg" alt="пиксельная машина" />
                     </div>
                     <div class="content-paragraf">
                         <p class="content-text">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
-                        <p class="content-opinion">Место для ваших воспоминаний о начале третьего спринта.</p>
+                        <p class="content-text">Место для ваших воспоминаний о начале третьего спринта.</p>
                     </div>
-                    <div type="type" class="button">
+                    <div type="button" class="button">
                         <button class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
@@ -304,10 +306,10 @@
                             Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты
                             очень нужна концентрация. Вспомните, откуда вы её черпали.
                         </p>
-                        <p class="content-opinion">Место для ваших воспоминаний об окончании третьего спринта.</p>
+                        <p class="content-text">Место для ваших воспоминаний об окончании третьего спринта.</p>
                     </div>
                     <div class="button">
-                        <button type="type" class="card__icon-button">
+                        <button type="button" class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
@@ -339,7 +341,7 @@
                 <article class="card">
                     <h2 class="main__title">«Сейчас я здесь»</h2>
                     <div class="card-conteiner">
-                        <p class="label">&lt;experience&gt;</p>    
+                        <p class="label">&lt;experience&gt;</p>
                         <img class="image-car filter-mass" src="./images/спринт-7.jpg" alt="пиксельная машина" />
                     </div>
                     <div class="content-paragraf">
@@ -347,10 +349,10 @@
                             Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир
                             постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.
                         </p>
-                        <p class="content-opinion">Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
+                        <p class="content-text">Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
                     </div>
                     <div class="button">
-                        <button type="type" class="card__icon-button">
+                        <button type="button" class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
@@ -381,9 +383,10 @@
         </main>
         <dialog id="dialog" class="window">
             <div class="dialog-window">
-                <svg class="window-floppy" fill="currentColor" width="39" height="39">
-                    <use href="#floppy"></use>
+                <svg class="window-floppy" viewBox="0 0 39 39" fill="currentColor" width="39" height="39">
+                    <use href="./svg/sprite.svg#floppy"></use>
                 </svg>
+
                 <h2 class="window-text">Вставьте дискету, чтобы продолжить</h2>
             </div>
             <button type="button" class="window-ok" onclick="window['dialog'].close()">
@@ -393,8 +396,8 @@
         <footer>
             <div class="button-save">
                 <button class="save" type="button" onclick="window['dialog'].showModal()" aria-controls="dialog">
-                    <svg class="footer-floppy" fill="currentColor" width="29" heigth="28">
-                        <use href="#floppy-2"></use>
+                    <svg class="footer-floppy" viewBox="0 0 29 28" fill="currentColor" width="29" height="28">
+                        <use href="./svg/sprite.svg#floppy-2"></use>
                     </svg>
                     <span class="save__text">Сохранить на память</span>
                 </button>
@@ -403,55 +406,3 @@
         <script src="./scripts/like.js"></script>
     </body>
 </html>
-<svg xmlns="http://www.w3.org/2000/svg" width="29" height="28" fill="currentColor">
-    <symbol id="floppy-2" fill="currentColor">
-        <path fill="currentColor" d="M.5 0h2.154v2.154H.5zM.5 2.154h2.154v2.154H.5zM.5 4.308h2.154v2.154H.5zM.5 6.462h2.154v2.154H.5z" />
-        <path fill="currentColor" d="M.5 8.615h2.154v2.154H.5zM.5 10.769h2.154v2.154H.5zM.5 12.923h2.154v2.154H.5zM.5 15.077h2.154v2.154H.5zM.5 17.231h2.154v2.154H.5zM.5 19.385h2.154v2.154H.5z" />
-        <path fill="currentColor" d="M.5 21.538h2.154v2.154H.5zM.5 23.692h2.154v2.154H.5zM.5 25.846h2.154V28H.5zM24.193 0v2.154h-2.154V0z" />
-        <path fill="currentColor" d="M22.04 0v2.154h-2.155V0zM19.884 0v2.154H17.73V0zM17.73 0v2.154h-2.154V0z" />
-        <path fill="currentColor" d="M15.577 0v2.154h-2.154V0zM13.423 0v2.154H11.27V0zM11.27 0v2.154H9.115V0z" />
-        <path
-            fill="currentColor"
-            d="M9.116 0v2.154H6.962V0zM6.96 0v2.154H4.808V0zM4.807 0v2.154H2.653V0zM26.346 2.154v2.154h-2.154V2.154zM6.96 4.308v2.154H4.808V4.308zM6.961 2.154v2.154H4.807V2.154zM6.96 6.462v2.154H4.808V6.462zM22.039 4.308v2.154h-2.154V4.308zM22.04 2.154v2.154h-2.155V2.154zM22.039 6.462v2.154h-2.154V6.462zM17.73 4.307v2.154h-2.154V4.307z"
-        />
-        <path
-            fill="currentColor"
-            d="M17.73 2.154v2.154h-2.153V2.154zM17.73 6.461v2.154h-2.154V6.461zM22.04 8.615v2.154h-2.155V8.615zM19.884 8.615v2.154H17.73V8.615zM17.73 8.615v2.154h-2.153V8.615zM15.577 8.615v2.154h-2.154V8.615zM13.423 8.615v2.154H11.27V8.615zM11.27 8.616v2.154H9.116V8.616zM9.116 8.615v2.154H6.962V8.615zM6.961 8.615v2.154H4.807V8.615zM24.193 15.077v2.154h-2.154v-2.154zM22.039 15.077v2.154h-2.154v-2.154zM19.884 15.077v2.154H17.73v-2.154zM17.73 15.076v2.154h-2.154v-2.154z"
-        />
-        <path fill="currentColor" d="M15.577 15.077v2.154h-2.154v-2.154zM13.423 15.077v2.154h-2.154v-2.154z" />
-        <path fill="currentColor" d="M11.27 15.077v2.154H9.114v-2.154z" />
-        <path fill="currentColor" d="M9.116 15.077v2.154H6.962v-2.154zM6.96 15.077v2.154H4.808v-2.154zM24.192 17.231v2.154h-2.154v-2.154z" />
-        <path fill="currentColor" d="M6.96 17.23v2.155H4.808V17.23zM24.192 19.385v2.154h-2.154v-2.154zM6.96 19.385v2.154H4.808v-2.154zM24.193 21.539v2.154h-2.154v-2.154z" />
-        <path fill="currentColor" d="M6.961 21.538v2.154H4.807v-2.154zM6.961 23.692v2.154H4.807v-2.154zM24.193 23.693v2.154H22.04v-2.154z" />
-        <path fill="currentColor" d="M26.346 25.846V28h-2.154v-2.154z" />
-        <path fill="currentColor" d="M24.193 25.846V28h-2.154v-2.154zM22.039 25.846V28h-2.154v-2.154zM19.884 25.846V28H17.73v-2.154zM17.73 25.845V28h-2.154v-2.154z" />
-        <path fill="currentColor" d="M15.577 25.846V28h-2.154v-2.154zM13.423 25.846V28h-2.154v-2.154z" />
-        <path fill="currentColor" d="M11.27 25.846V28H9.114v-2.154z" />
-        <path fill="currentColor" d="M9.116 25.846V28H6.962v-2.154zM6.96 25.846V28H4.808v-2.154zM4.807 25.846V28H2.653v-2.154zM28.5 28h-2.154v-2.154H28.5zM28.5 25.846h-2.154v-2.154H28.5z" />
-        <path fill="currentColor" d="M28.5 23.693h-2.154v-2.154H28.5zM28.5 21.539h-2.154v-2.154H28.5zM28.5 19.385h-2.154V17.23H28.5zM28.5 17.23h-2.154v-2.154H28.5z" />
-        <path fill="currentColor" d="M28.5 15.077h-2.154v-2.154H28.5zM28.5 12.923h-2.154V10.77H28.5zM28.5 10.77h-2.154V8.616H28.5zM28.5 8.615h-2.154V6.461H28.5zM28.5 6.461h-2.154V4.307H28.5z" />
-    </symbol>
-</svg>
-
-
-<svg xmlns="http://www.w3.org/2000/svg" width="39" height="39" fill="currentColor">
-    <symbol id="floppy" fill="currentColor">
-        <path fill="currentColor" d="M0 0h3v3H0zM0 3h3v3H0zM0 6h3v3H0zM0 9h3v3H0zM0 12h3v3H0zM0 15h3v3H0zM0 18h3v3H0zM0 21h3v3H0zM0 24h3v3H0zM0 27h3v3H0zM0 30h3v3H0zM0 33h3v3H0zM0 36h3v3H0zM33 0v3h-3V0z" />
-        <path fill="currentColor" d="M30.003 0v3h-3V0zM27 0v3h-3V0zM24 0v3h-3V0zM20.999 0v3h-3V0z" />
-        <path fill="currentColor" d="M18 0v3h-3V0zM14.999 0v3h-3V0z" />
-        <path fill="currentColor" d="M12 0v3H9V0zM8.996 0v3h-3V0z" />
-        <path
-            fill="currentColor"
-            d="M6 0v3H3V0zM36 3v3h-3V3zM8.996 6v3h-3V6zM8.996 3v3h-3V3zM8.996 9v3h-3V9zM30.003 6v3h-3V6zM30.003 3v3h-3V3zM30.003 9v3h-3V9zM24 6v3h-3V6zM24 3v3h-3V3zM24 9v3h-3V9zM30.003 12v3h-3v-3zM27 12v3h-3v-3zM24 12v3h-3v-3zM20.999 12v3h-3v-3z"
-        />
-        <path fill="currentColor" d="M18 12v3h-3v-3zM14.999 12v3h-3v-3z" />
-        <path fill="currentColor" d="M12 12v3H9v-3zM8.996 12v3h-3v-3zM33 21v3h-3v-3z" />
-        <path fill="currentColor" d="M30.003 21v3h-3v-3zM27 21v3h-3v-3zM24 21v3h-3v-3zM20.999 21v3h-3v-3z" />
-        <path fill="currentColor" d="M18 21v3h-3v-3zM14.999 21v3h-3v-3z" />
-        <path fill="currentColor" d="M12 21v3H9v-3zM8.996 21v3h-3v-3zM33 24v3h-3v-3zM8.996 24v3h-3v-3zM33 27v3h-3v-3zM8.996 27v3h-3v-3zM33 30v3h-3v-3zM8.996 30v3h-3v-3zM8.996 33v3h-3v-3zM33 33v3h-3v-3zM36 36v3h-3v-3zM33 36v3h-3v-3z" />
-        <path fill="currentColor" d="M30.003 36v3h-3v-3zM27 36v3h-3v-3zM24 36v3h-3v-3zM20.999 36v3h-3v-3z" />
-        <path fill="currentColor" d="M18 36v3h-3v-3zM14.999 36v3h-3v-3z" />
-        <path fill="currentColor" d="M12 36v3H9v-3zM8.996 36v3h-3v-3z" />
-        <path fill="currentColor" d="M6 36v3H3v-3zM39 39h-3v-3h3zM39 36h-3v-3h3zM39 33h-3v-3h3zM39 30h-3v-3h3zM39 27h-3v-3h3zM39 24h-3v-3h3zM39 21h-3v-3h3zM39 18h-3v-3h3zM39 15h-3v-3h3zM39 12h-3V9h3zM39 9h-3V6h3z" />
-    </symbol>
-</svg>
