--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <link rel="icon" href="./images/favicon.svg" sizes="any" />
         <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
         <link rel="apple-touch-icon" href="./images/favicon.svg" />
-        <object type="image/svg+xml" data="/svg/sprite.svg"></object>
         <script src="./scripts/set-theme.js"></script>
     </head>
     <body class="page">
@@ -79,7 +78,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="card__like-button normal-button">
+                        <button type="button" class="card__like-button normal-button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
@@ -122,7 +121,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="card__like-button normal-button">
+                        <button type="button" class="card__like-button normal-button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
@@ -162,7 +161,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="card__like-button normal-button">
+                        <button type="button" class="card__like-button normal-button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
@@ -205,7 +204,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="card__like-button normal-button">
+                        <button type="button" class="card__like-button normal-button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
@@ -225,8 +224,8 @@
                         </p>
                         <p class="content-text">Место для ваших воспоминаний об окончании второго спринта.</p>
                     </div>
-                    <div type="button" class="button">
-                        <button class="card__icon-button">
+                    <div class="button">
+                        <button type="button" class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
@@ -248,7 +247,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="card__like-button normal-button">
+                        <button type="button" class="card__like-button normal-button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
@@ -265,8 +264,8 @@
                         <p class="content-text">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
                         <p class="content-text">Место для ваших воспоминаний о начале третьего спринта.</p>
                     </div>
-                    <div type="button" class="button">
-                        <button class="card__icon-button">
+                    <div class="button">
+                        <button type="button" class="card__icon-button">
                             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
@@ -288,7 +287,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="card__like-button normal-button">
+                        <button type="button" class="card__like-button normal-button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
@@ -331,7 +330,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="card__like-button normal-button">
+                        <button type="button" class="card__like-button normal-button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
@@ -374,7 +373,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="card__like-button normal-button">
+                        <button type="button" class="card__like-button normal-button">
                             <span class="button__text">Like</span>
                         </button>
                     </div>
